# Habit-Tracker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/screenshots/: .gitkeep
scripts/: install.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: achievements.rs  habits.rs  mod.rs  mood.rs  pomodoro.rs
src-tauri/src/db/: mod.rs
src/components/achievements/: AchievementsPage.tsx  LevelUnlocks.tsx
src/components/habits/: HabitCard.tsx  HabitForm.tsx  HabitList.tsx  HabitTemplates.tsx
src/components/layout/: Header.tsx  NotificationsPanel.tsx  SearchModal.tsx  Sidebar.tsx
src/components/mood/: MoodPicker.tsx
src/components/pomodoro/: PomodoroTimer.tsx
src/components/settings/: SettingsPage.tsx
src/components/stats/: Dashboard.tsx  StatisticsPage.tsx
src/components/ui/: AnimatedCheckbox.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  ProgressRing.tsx
src/lib/: animations.ts  constants.ts  sounds.ts  utils.ts
src/stores/: achievementStore.ts  habitStore.ts  moodStore.ts  pomodoroStore.ts  settingsStore.ts
src/types/: index.ts
